--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,12 +22,15 @@
         </div>
     </div>
 <!-- MENU -->
-    <ul class="w3-navbar w3-theme w3-card-2 w3-wide">
+    <ul class="w3-navbar w3-theme w3-card-2 w3-wide" style="height: 54px;">
         <li class="navbarbtns"><a class="w3-hover-white w3-padding-16" href="{{ path('list_tournament') }}">Turnieje</a></li>
         <li class="navbarbtns"><a class="w3-hover-white w3-padding-16" href="#">####</a></li>
 
         <li class="navbarbtns w3-right"><a class="w3-hover-white w3-padding-16" href="#">Rejestracja</a></li>
         <li class="navbarbtns w3-right"><a class="w3-hover-white w3-padding-16" href="#">Logowanie</a></li>
+        <li class="w3-amber w3-right" style="border-radius: 5px; height: 38px; margin: 9px 9px 5px 9px;">
+            <a class="w3-padding-10 w3-hover-green" href="#">+ Dodaj</a>
+        </li>
     </ul>
 <!-- CONTENT -->
     <div>
