--- a/src/TournamentBundle/Resources/views/Tournament/list_tournament.html.twig
+++ b/src/TournamentBundle/Resources/views/Tournament/list_tournament.html.twig
@@ -3,7 +3,7 @@
 {% block title %}TournamentBundle:Tournament:listTournament{% endblock %}
 
 {% block body %}
-
+    <br>
     <table class="w3-table w3-bordered w3-striped" data-toggle="table" data-search="true">
         <tr>
             <th>Nazwa</th>
@@ -21,12 +21,9 @@
             <td>{{ tournament.tournamentDate |date('d-m-Y') }}</td>
             <td>{{ tournament.city }}, {{ tournament.street }}</td>
             <td>
-                <a href = "{{ path('show_tournament', { 'id': tournament.id }) }}" >
-                    <button class="w3-btn w3-ripple">&#9998; Wyświetl</button>
-                </a>
-                <a href = "{{ path('show_tournament', { 'id': tournament.id }) }}" >
-                    <button class="w3-btn w3-ripple">&#9998; Dołącz</button>
-                </a>
+                <a href = "{{ path('show_tournament', { 'id': tournament.id }) }}" ><button class="w3-btn w3-ripple">&#9998; Wyświetl</button></a>
+                <a href = "{{ path('participate_in',  { 'id': tournament.id }) }}" ><button class="w3-btn w3-ripple w3-green">&#9998; Dołącz</button></a>
+                <a href = "{{ path('edit_tournament',  { 'id': tournament.id }) }}" ><button class="w3-btn w3-ripple w3-amber">&#9998; Edytuj</button></a>
             </td>
         </tr>
         {% endfor %}
