--- a/src/TournamentBundle/Resources/views/Tournament/add_tournament.html.twig
+++ b/src/TournamentBundle/Resources/views/Tournament/add_tournament.html.twig
@@ -1,12 +1,13 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}turniejowo.pl - Dołącz{% endblock %}
+{% block title %}turniejowo.pl - Utwórz{% endblock %}
 
 {% block body %}
+
     {{ form_start(form) }}
-    <h3>Dołącz do turnieju</h3>
+    <h3>Utwórz turniej</h3>
     {{ form_widget(form) }}
-    <input type="submit" class="w3-btn w3-ripple w3-green" value="Dołącz" />
+    <input type="submit" class="w3-btn w3-ripple w3-green" value="Dodaj" />
     {#<a href="{{ path('show_tournament', { 'id': edit_form.id }) }}" class="w3-btn w3-ripple w3-amber">Wróć do wydarzenia</a>#}
     {{ form_end(form) }}
 
