--- a/web/css/my_style.css
+++ b/web/css/my_style.css
@@ -4,6 +4,10 @@ table{
 form label{
     color: #4CAF50;
 }
+.navbarbtns{
+    width: 150px;
+    text-align: center;
+}
 
 @media only screen and (min-width:993px){
     form{
