--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,11 +28,9 @@
 <!-- MENU -->
     <ul class="w3-navbar w3-theme w3-card-2 w3-wide  w3-green" style="height: 54px;">
         <li class="navbarbtns"><a class="w3-hover-white w3-padding-16" href="{{ path('list_tournament') }}">Turnieje</a></li>
-        <li class="navbarbtns"><a class="w3-hover-white w3-padding-16" href="#">####</a></li>
-
-
 
         {% if is_granted('ROLE_USER') %}
+            <li class="navbarbtns"><a class="w3-hover-white w3-padding-16" href="{{ path('my_tournaments') }}">Moje turnieje</a></li>
             <li class="navbarbtns w3-right"><a class="w3-hover-white w3-padding-16" href="{{ path('logout') }}">Wyloguj</a></li>
         {% else %}
             <li class="navbarbtns w3-right"><a class="w3-hover-white w3-padding-16" href="{{ path('register_page') }}">Rejestracja</a></li>
