--- a/src/TournamentBundle/Resources/views/Tournament/edit_tournament.html.twig
+++ b/src/TournamentBundle/Resources/views/Tournament/edit_tournament.html.twig
@@ -7,8 +7,8 @@
     {{ form_start(edit_form) }}
     <h3>Edytuj turniej</h3>
     {{ form_widget(edit_form) }}
-    <input type="submit" class="w3-btn w3-ripple w3-green" value="Edytuj" />
-    {#<a href="{{ path('show_tournament', { 'id': edit_form.id }) }}" class="w3-btn w3-ripple w3-amber">Wróć do wydarzenia</a>#}
+    <input type="submit" class="w3-btn w3-ripple w3-amber" value="Edytuj" />
+    <a href="{{ path('show_tournament', { 'id': id }) }}" class="w3-btn w3-ripple">Wróć do wydarzenia</a>
     {{ form_end(edit_form) }}
 
 {% endblock %}
