--- a/src/TournamentBundle/Resources/views/Tournament/show_tournament.html.twig
+++ b/src/TournamentBundle/Resources/views/Tournament/show_tournament.html.twig
@@ -5,10 +5,16 @@
 {% block body %}
 <div>
 <h1 style="display: inline-block">{{ tournament.name }}</h1>
-    <button class="w3-btn w3-ripple w3-right w3-green" style="margin: 20px 0 0 20px">Dołącz</button>
-    <a href = "{{ path('edit_tournament', { 'id': tournament.id }) }}" >
-        <button class="w3-btn w3-ripple w3-right w3-amber" style="margin-top: 20px">&#9998; Edytuj</button>
-    </a>
+    {% if is_granted('ROLE_USER') %}
+        <a href = "{{ path('participate_in', { 'id': tournament.id }) }}" >
+            <button class="w3-btn w3-ripple w3-right w3-green" style="margin: 20px 0 0 20px">Dołącz</button>
+        </a>
+         {% if user_id == tournament.organizer.id %}
+            <a href = "{{ path('edit_tournament', { 'id': tournament.id }) }}" >
+                <button class="w3-btn w3-ripple w3-right w3-amber" style="margin-top: 20px">&#9998; Edytuj</button>
+            </a>
+        {% endif %}
+    {% endif %}
 </div>
 
 <div class="w3-main">
