--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,10 +8,18 @@
         {#<link rel="script" href={{ asset('js/angular.min.js') }}>#}
         {#<link rel="script" href={{ asset('js/jquery.min.js') }}>#}
         {#<link rel="script" href={{ asset('js/jbootstrap.min.js') }}>#}
+        <link rel="stylesheet" href={{ asset('css/jquery.dataTables.min.css') }}>
         <link rel="stylesheet" href={{ asset('css/bootstrap.min.css') }}>
         <link rel="stylesheet" href={{ asset('css/w3.css') }}>
         <link rel="stylesheet" href={{ asset('css/my_style.css') }}>
     {% endblock %}
+
+    <script type="text/javascript" src="{{ asset('js/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/angular.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/jquery.dataTables.min.js') }}"></script>
+
+
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
 
@@ -46,8 +54,8 @@
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </div>
-            <script src="{{ asset('js/jquery.min.js') }}"></script>
-            <script src="{{ asset('js/bootstrap.min.js') }}"></script>
-            <script src="{{ asset('js/angular.min.js') }}"></script>
+            {#<script src="{{ asset('js/jquery.min.js') }}"></script>#}
+            {#<script src="{{ asset('js/bootstrap.min.js') }}"></script>#}
+            {#<script src="{{ asset('js/angular.min.js') }}"></script>#}
     </body>
 </html>
