--- a/src/TournamentBundle/Resources/views/Tournament/my_tournaments.html.twig
+++ b/src/TournamentBundle/Resources/views/Tournament/my_tournaments.html.twig
@@ -4,8 +4,9 @@
 
 {% block body %}
     <br>
-    <h3>Moje turnieje</h3>
-    <table class="w3-table w3-bordered w3-striped" data-toggle="table" data-search="true">
+    <h3>Moje</h3>
+    <table id="tournamentTable" class="w3-table w3-bordered w3-striped">
+        <thead>
         <tr>
             <th>Nazwa</th>
             <th>Dyscyplina</th>
@@ -14,6 +15,8 @@
             <th>Miejsce</th>
             <th>Akcje</th>
         </tr>
+        </thead>
+        <tbody>
         {% for tournament in tournaments %}
             <tr>
                 <td>{{ tournament.name }}</td>
@@ -32,6 +35,23 @@
                 </td>
             </tr>
         {% endfor %}
+        </tbody>
     </table>
-
+    <script>$(document).ready(function(){
+            $('#tournamentTable').DataTable({
+                responsive: false,
+                'aoColumns': [
+                    { bSearchable: true, bSortable: true },
+                    { bSearchable: true, bSortable: true },
+                    { bSearchable: true, bSortable: true },
+                    { bSearchable: true, bSortable: true },
+                    { bSearchable: true, bSortable: true },
+                    { sWidth: "320px", bSearchable: false, bSortable: false },
+                ],
+                columnDefs: [
+                    { targets: [-1, -3], className: 'td' }
+                ]
+            } );
+        });
+    </script>
 {% endblock %}
