--- a/src/TournamentBundle/Resources/views/Tournament/my_tournaments.html.twig
+++ b/src/TournamentBundle/Resources/views/Tournament/my_tournaments.html.twig
@@ -22,7 +22,7 @@
                 <td>{{ tournament.name }}</td>
                 <td>{{ tournament.discipline.name }}</td>
                 <td>{{ tournament.organizer.fullname }}</td>
-                <td>{{ tournament.tournamentDate |date('d-m-Y') }}</td>
+                <td>{{ tournament.tournamentDate |date('Y-m-d') }}</td>
                 <td>{{ tournament.city }}, {{ tournament.street }}</td>
                 <td>
                     <a href = "{{ path('show_tournament', { 'id': tournament.id }) }}" ><button class="w3-btn w3-ripple">&#9998; Wyświetl</button></a>
@@ -38,19 +38,33 @@
         </tbody>
     </table>
     <script>$(document).ready(function(){
-            $('#tournamentTable').DataTable({
-                responsive: false,
+            $('#tournamentTable').dataTable({
+                responsive: true,
                 'aoColumns': [
                     { bSearchable: true, bSortable: true },
                     { bSearchable: true, bSortable: true },
                     { bSearchable: true, bSortable: true },
                     { bSearchable: true, bSortable: true },
                     { bSearchable: true, bSortable: true },
-                    { sWidth: "320px", bSearchable: false, bSortable: false },
+                    { bSearchable: false, bSortable: false },
                 ],
                 columnDefs: [
                     { targets: [-1, -3], className: 'td' }
-                ]
+                ],
+// http://legacy.datatables.net/usage/i18n
+                "oLanguage": {
+                    "oPaginate": {
+                        "sPrevious": "Poprzednia",
+                        "sNext": "Następna",
+                        "sLast": "Ostatnia",
+                        "sFirst": "Pierwsza",
+                    },
+                    "sSearch" : "Szukaj:",
+                    "sZeroRecords": "Brak rekordów do wyświetlenia",
+                    "sInfo": "Wyświetlono _START_ do _END_",
+                    "sLengthMenu": "Wyświetlaj po  _MENU_ na stronę"
+                }
+
             } );
         });
     </script>
