Reseting password and Email Verification Improvement

--- a/src/RegisterBundle/Resources/views/Register/email_verified.html.twig
+++ b/src/RegisterBundle/Resources/views/Register/email_verified.html.twig
@@ -1,1 +1,7 @@
-Brawo brawo brawo!
+{% extends "::base.html.twig" %}
+
+{% block title %}XXXXXXXXX{% endblock %}
+
+{% block body %}
+    Email został zweryfikowany pomyślnie.
+{% endblock %}
