Reseting passsword logic and limit excceed logic on participation page

--- a/src/RegisterBundle/Resources/views/Register/email_verification_failed_incorrect_token.html.twig
+++ b/src/RegisterBundle/Resources/views/Register/email_verification_failed_incorrect_token.html.twig
@@ -3,5 +3,5 @@
 {% block title %}Mail z linkiem resetującym został wysłany{% endblock %}
 
 {% block body %}
-    Podany token nie jest poprawny.
+    Podany token nie jest poprawny. Zarejestruj się ponownie.
 {% endblock %}
