--- a/src/RegisterBundle/Resources/views/Security/reset_password.html.twig
+++ b/src/RegisterBundle/Resources/views/Security/reset_password.html.twig
@@ -3,5 +3,11 @@
 {% block title %}resetowanie hasła{% endblock %}
 
 {% block body %}
-    Resetowanie hasła.
+    {{ form_start(form) }}
+    <h3>Ustawianie nowego hasła</h3>
+    <br>
+    {{ form_widget(form) }}
+    <input type="submit" class="w3-btn w3-ripple w3-green" value="Zresetuj hasło" />
+    {{ form_end(form) }}
+
 {% endblock %}
