--- a/web/css/my_style.css
+++ b/web/css/my_style.css
@@ -2,16 +2,47 @@ table{
     width: 100%;
 }
 form label{
-    color: #4CAF50;
+    color: #4CAF50;     /* w3-green */
 }
 .navbarbtns{
     width: 170px;
     text-align: center;
 }
 
+.exclamation-mark{
+    font-size: 70px;
+    float: left;
+    color:  black;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    background: #ffc107; /* w3-amber */;
+    display: inline;
+    text-align: center;
+    font-weight: bold;
+}
+
+.error-message{
+    font-size : 20px;
+    padding-left: 20px;
+    height: 100px;
+    line-height: 100px;
+    display: inline;
+    vertical-align: middle;
+    font-weight: bold;
+    text-align: left;
+}
+
+
 @media only screen and (min-width:993px){
     form{
         width: 70%;
         margin: 0 15% 0 15%;
+    }
+
+    .error-page{
+        width: 70%;
+        margin: 5% 15% 0 15%;
+        display: table;
     }
 }
