Tournament table added

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,9 +5,7 @@
     <title style="clear: none">{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        {#<link rel="script" href={{ asset('js/angular.min.js') }}>#}
-        {#<link rel="script" href={{ asset('js/jquery.min.js') }}>#}
-        {#<link rel="script" href={{ asset('js/jbootstrap.min.js') }}>#}
+        <link rel="stylesheet" href={{ asset('css/jquery.bracket.min.css') }}>
         <link rel="stylesheet" href={{ asset('css/jquery.dataTables.min.css') }}>
         <link rel="stylesheet" href={{ asset('css/bootstrap.min.css') }}>
         <link rel="stylesheet" href={{ asset('css/w3.css') }}>
@@ -15,10 +13,10 @@
     {% endblock %}
 
     <script type="text/javascript" src="{{ asset('js/jquery.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
+    {#<script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>#}
     <script type="text/javascript" src="{{ asset('js/angular.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/jquery.dataTables.min.js') }}"></script>
-
+    <script type="text/javascript" src="{{ asset('js/jquery.bracket.min.js') }}"></script>
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
