--- a/src/RegisterBundle/Resources/views/Security/login.html.twig
+++ b/src/RegisterBundle/Resources/views/Security/login.html.twig
@@ -11,11 +11,11 @@
         {% endif %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <div class="form-group">
-            <label class="control-label required" for="username">Username</label>
+            <label class="control-label required" for="username">Email</label>
             <input id="username" name="_username" required="required" class="form-control" type="text" value="{{ last_username }}">
         </div>
         <div class="form-group">
-            <label class="control-label required" for="password">Password</label>
+            <label class="control-label required" for="password">Hasło</label>
             <input id="password" name="_password" required="required" class="form-control" type="password">
         </div>
 
