--- a/app/Resources/views/base2.html.twig
+++ b/app/Resources/views/base2.html.twig
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href={{ asset('css/my_style.css') }}>
     {% endblock %}
 
-    <script type="text/javascript" src="{{ asset('js/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/jquery2.min.js') }}"></script>
     {#<script type="text/javascript" src="{{ asset('js/jquery.min.js') }}"></script>#}
     {#<script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>#}
     <script type="text/javascript" src="{{ asset('js/angular.min.js') }}"></script>
