--- a/src/TournamentBundle/Resources/views/Tournament/list_tournament.html.twig
+++ b/src/TournamentBundle/Resources/views/Tournament/list_tournament.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "::base2.html.twig" %}
 
 {% block title %}TournamentBundle:Tournament:listTournament{% endblock %}
 
@@ -34,6 +34,7 @@
             {% endfor %}
         </tbody>
     </table>
+
     <script>$(document).ready(function(){
             $('#tournamentTable').dataTable({
                 responsive: true,
